--- a/_src/html/gcintranet-fr.html
+++ b/_src/html/gcintranet-fr.html
@@ -11,7 +11,7 @@
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script src="./soyutils.js"></script>
-		<script src="./gciintranet-fr.js"></script>
+		<script src="./gcintranet-fr.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
