--- a/_src/html/index-fr.html
+++ b/_src/html/index-fr.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-fr.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 		<title>Content page - Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
-		<meta name="description" content="The purpose of the CDTS is essentially to deliver the presentation layer of the Canada.ca theme or Intranet.canada.ca theme to web assets. It decouples the presentation layer from the business logic of a static website or web application and allows rapid updates across multiple networks.">
+		<meta name="description" content="L’objectif de la SGDC est de fournir la couche de présentation des thèmes Canada.ca et intranet.canada.ca aux actifs Web. Elle sépare la couche de présentation du traitement des données d’un site Web statique ou d’une application Web et permet les mises à jour rapides à travers plusieurs réseaux.">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script src="./soyutils.js"></script>
-		<script src="./gcweb-en.js"></script>
+		<script src="./gcweb-fr.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
@@ -26,28 +26,28 @@
 	<body vocab="http://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
-			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/appTop-en.html -->
+			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/appTop-fr.html -->
 		</div>
 		<!-- Write closure template -->
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.appTop({
-				"lngLinks": [{"lang": "fr",	"href": "index-fr.html", "text": "Français"}],
-				"appName": [{"text": "Centrally Deployed Templates Solution (CDTS)", "href": "https://cenw-wscoe.github.io/sgdc-cdts/docs/index-en.html"}],
+				"lngLinks": [{"lang": "en",	"href": "index.html", "text": "English"}],
+				"appName": [{"text": "Solution de gabarits à déploiement centralisé (SGDC)", "href": "https://cenw-wscoe.github.io/sgdc-cdts/docs/index-fr.html"}],
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-            <h1 property="name" id="wb-cont">CDTS node compile</h1>
+            <h1 property="name" id="wb-cont">SGDC compile node</h1>
 			<ul>
-				<li><a href="./gcweb-en.html">GCWeb English sample page</a></li>
-				<li><a href="./gcweb-fr.html">GCWeb French sample page</a></li>
-				<li><a href="./gcintranet-en.html">GCIntranet English sample page</a></li>
-				<li><a href="./gcintranet-fr.html">GCIntranet French sample page</a></li>
+				<li><a href="./gcweb-fr.html">GCWeb page d'exemple en anglais</a></li>
+				<li><a href="./gcweb-fr.html">GCWeb page d'exemple en français</a></li>
+				<li><a href="./gcintranet-fr.html">GCIntranet page d'exemple en anglais</a></li>
+				<li><a href="./gcintranet-fr.html">GCIntranet page d'exemple en français</a></li>
 			</ul>
 
 			<div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
-				<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/preFooter-en.html -->
+				<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/preFooter-fr.html -->
 			</div>
 			<!-- Write closure template -->
 			<script>
@@ -59,7 +59,7 @@
 		</main>
 		<div id="def-footer">
 			<!-- Write closure fall-back static file -->
-			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/appFooter-en.html -->
+			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/appFooter-fr.html -->
 		</div>
 		<!-- Write closure template -->
 		<script>
