--- a/_src/html/index-fr.html
+++ b/_src/html/index-fr.html
@@ -10,8 +10,8 @@
 		<meta name="description" content="L’objectif de la SGDC est de fournir la couche de présentation des thèmes Canada.ca et intranet.canada.ca aux actifs Web. Elle sépare la couche de présentation du traitement des données d’un site Web statique ou d’une application Web et permet les mises à jour rapides à travers plusieurs réseaux.">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
-		<script src="../../soyutils.js"></script>
-		<script src="../../gcweb-fr.js"></script>
+		<script src="./soyutils.js"></script>
+		<script src="./gcweb-fr.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
@@ -20,7 +20,7 @@
 		<script>
 			document.write(wet.builder.refTop({
                 "isApplication" : true,
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			}));
 		</script>
 	</head>
@@ -35,16 +35,16 @@
 			defTop.outerHTML = wet.builder.appTop({
 				"lngLinks": [{"lang": "en",	"href": "index.html", "text": "English"}],
 				"appName": [{"text": "Solution de gabarits à déploiement centralisé (SGDC)", "href": "https://cenw-wscoe.github.io/sgdc-cdts/docs/index-fr.html"}],
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">SGDC compile node</h1>
 			<ul>
-				<li><a href="./gcweb-fr.html">GCWeb page d'exemple en anglais</a></li>
-				<li><a href="./gcweb-fr.html">GCWeb page d'exemple en français</a></li>
-				<li><a href="./gcintranet-fr.html">GCIntranet page d'exemple en anglais</a></li>
-				<li><a href="./gcintranet-fr.html">GCIntranet page d'exemple en français</a></li>
+				<li><a href="./cdts/html/gcweb-fr.html">GCWeb page d'exemple en anglais</a></li>
+				<li><a href="./cdts/html/gcweb-fr.html">GCWeb page d'exemple en français</a></li>
+				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet page d'exemple en anglais</a></li>
+				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet page d'exemple en français</a></li>
 			</ul>
 
 			<div id="def-preFooter">
@@ -67,14 +67,14 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
                 "isApplication" : true,
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			}));
 		</script>
 	</body>
