--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -10,8 +10,8 @@
 		<meta name="description" content="The purpose of the CDTS is essentially to deliver the presentation layer of the Canada.ca theme or Intranet.canada.ca theme to web assets. It decouples the presentation layer from the business logic of a static website or web application and allows rapid updates across multiple networks.">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
-		<script src="../../soyutils.js"></script>
-		<script src="../../gcweb-en.js"></script>
+		<script src="./soyutils.js"></script>
+		<script src="./gcweb-en.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
@@ -20,7 +20,7 @@
 		<script>
 			document.write(wet.builder.refTop({
                 "isApplication" : true,
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			}));
 		</script>
 	</head>
@@ -35,16 +35,16 @@
 			defTop.outerHTML = wet.builder.appTop({
 				"lngLinks": [{"lang": "fr",	"href": "index-fr.html", "text": "Français"}],
 				"appName": [{"text": "Centrally Deployed Templates Solution (CDTS)", "href": "https://cenw-wscoe.github.io/sgdc-cdts/docs/index-en.html"}],
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">CDTS node compile</h1>
 			<ul>
-				<li><a href="./gcweb-en.html">GCWeb English sample page</a></li>
-				<li><a href="./gcweb-fr.html">GCWeb French sample page</a></li>
-				<li><a href="./gcintranet-en.html">GCIntranet English sample page</a></li>
-				<li><a href="./gcintranet-fr.html">GCIntranet French sample page</a></li>
+				<li><a href="./cdts/html/gcweb-en.html">GCWeb English sample page</a></li>
+				<li><a href="./cdts/html/gcweb-fr.html">GCWeb French sample page</a></li>
+				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet English sample page</a></li>
+				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet French sample page</a></li>
 			</ul>
 
 			<div id="def-preFooter">
@@ -67,14 +67,14 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
                 "isApplication" : true,
-				"cdnPath" : "../../"
+				"cdnPath" : "./"
 			}));
 		</script>
 	</body>
