Fix: Issue #87-GCWeb: English Server page: Console Error

--- a/_doc/GCWeb/samples/server-en.html
+++ b/_doc/GCWeb/samples/server-en.html
@@ -60,6 +60,10 @@
 					</ul>
 				</div>
 			</div>
+			<div id="def-preFooter">
+				<!-- Write closure fall-back static file -->
+				<!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_28/cdts/static/preFooter-fr.html -->
+			</div>
 			<!-- Write closure template -->
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
