--- a/_src/html/index-fr.html
+++ b/_src/html/index-fr.html
@@ -41,9 +41,11 @@
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">SGDC compile node</h1>
 			<ul>
-				<li><a href="./cdts/html/gcweb-fr.html">GCWeb page d'exemple en anglais</a></li>
+				<li><a href="./cdts/html/gcweb-en.html">GCWeb page d'exemple en anglais</a></li>
 				<li><a href="./cdts/html/gcweb-fr.html">GCWeb page d'exemple en français</a></li>
-				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet page d'exemple en anglais</a></li>
+				<li><a href="./cdts/html/gcwebopc-en.html">GCWebOPC page d'exemple en anglais</a></li>
+				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC page d'exemple en français</a></li>
+				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet page d'exemple en anglais</a></li>
 				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet page d'exemple en français</a></li>
 			</ul>
 
