Added links to GCWebOPC from index page

--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -43,6 +43,8 @@
 			<ul>
 				<li><a href="./cdts/html/gcweb-en.html">GCWeb English sample page</a></li>
 				<li><a href="./cdts/html/gcweb-fr.html">GCWeb French sample page</a></li>
+				<li><a href="./cdts/html/gcwebopc-en.html">GCWebOPC English sample page</a></li>
+				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC French sample page</a></li>
 				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet English sample page</a></li>
 				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet French sample page</a></li>
 			</ul>
