Added gcwebopc-en template.

--- a/_src/html/gcwebopc-fr.html
+++ b/_src/html/gcwebopc-fr.html
@@ -32,7 +32,7 @@
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
-				"lngLinks": [{"lang": "en",	"href": "gcweb-en.html", "text": "English"}],
+				"lngLinks": [{"lang": "en",	"href": "gcwebopc-en.html", "text": "English"}],
 				"cdnPath" : "../../"
 			});
 		</script>
