--- a/_src/html/gcwebopc-en.html
+++ b/_src/html/gcwebopc-en.html
@@ -32,7 +32,7 @@
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
-				"lngLinks": [{"lang": "fr",	"href": "gcweb-fr.html", "text": "Français"}],
+				"lngLinks": [{"lang": "fr",	"href": "gcwebopc-fr.html", "text": "Français"}],
 				"cdnPath" : "../../"
 			});
 		</script>
