Added splashpage and template in gcwebopc-en.soy

--- a/_src/html/index-fr.html
+++ b/_src/html/index-fr.html
@@ -47,6 +47,7 @@
 				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC page d'exemple en français</a></li>
 				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet page d'exemple en anglais</a></li>
 				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet page d'exemple en français</a></li>
+				<li><a href="./cdts/html/splashpage.html">OPC Splash page</a></li>
 			</ul>
 
 			<div id="def-preFooter">
