--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -45,9 +45,9 @@
 				<li><a href="./cdts/html/gcweb-fr.html">GCWeb French sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-en.html">GCWebOPC English sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC French sample page</a></li>
+				<li><a href="./cdts/html/gcwebopc-splashpage.html">GCWebOPC splash page</a></li>
 				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet English sample page</a></li>
 				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet French sample page</a></li>
-				<li><a href="./cdts/html/splashpage.html">OPC Splash page</a></li>
 			</ul>
 
 			<div id="def-preFooter">
