Features/gcwebopc theme (#5)
* Fixed issue when checking for French gcwebopc changes

* Added application template

* Update index-fr.html

* Update gcwebopc-serverPage.soy

* Updated jquery version to match gcweb theme

Co-authored-by: Joshua Campbell <joshua.campbell@priv.gc.ca>
Co-authored-by: Joshua Campbell <joshcampbell191@users.noreply.github.com>

--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -45,6 +45,8 @@
 				<li><a href="./cdts/html/gcweb-fr.html">GCWeb French sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-en.html">GCWebOPC English sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC French sample page</a></li>
+				<li><a href="./cdts/html/gcwebopc-app-en.html">GCWebOPC Application English sample page</a></li>
+				<li><a href="./cdts/html/gcwebopc-app-fr.html">GCWebOPC Application French sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-splashpage.html">GCWebOPC splash page</a></li>
 				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet English sample page</a></li>
 				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet French sample page</a></li>
