--- a/_src/html/index-fr.html
+++ b/_src/html/index-fr.html
@@ -45,7 +45,9 @@
 				<li><a href="./cdts/html/gcweb-fr.html">GCWeb page d'exemple en français</a></li>
 				<li><a href="./cdts/html/gcwebopc-en.html">GCWebOPC page d'exemple en anglais</a></li>
 				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC page d'exemple en français</a></li>
-				<li><a href="./cdts/html/gcwebopc-splashpage.html">GCWebOPC splash page d'exemple </a></li>
+				<li><a href="./cdts/html/gcwebopc-app-en.html">GCWebOPC application page d'exemple en anglais</a></li>
+				<li><a href="./cdts/html/gcwebopc-app-fr.html">GCWebOPC application page d'exemple en français</a></li>
+				<li><a href="./cdts/html/gcwebopc-splashpage.html">GCWebOPC splash page d'exemple</a></li>
 				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet page d'exemple en anglais</a></li>
 				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet page d'exemple en français</a></li>
 			</ul>
