--- a/_src/html/gcweb-en.html
+++ b/_src/html/gcweb-en.html
@@ -38,7 +38,7 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">CDTS node compile GCWeb sample</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi eos nostrum a, dicta veniam voluptatum mollitia similique alias quos itaque enim error magni atque dignissimos, nobis reprehenderit expedita ex temporibus.</p>
+            <p>Lorem ipsum dolor sit amet <a href="http://csszengarden.com/219/">http://csszengarden.com/219/</a> consectetur, adipisicing elit. Nisi eos nostrum a, dicta veniam voluptatum mollitia similique alias quos itaque enim error magni atque dignissimos, nobis reprehenderit expedita ex temporibus.</p>
             <p>Debitis quasi inventore asperiores assumenda modi dicta vel explicabo! Repellat eos inventore eius dolores sapiente quisquam odit corporis harum exercitationem similique quaerat nobis voluptas optio, esse aut voluptatum quidem iure.</p>
             <p>Ullam ad a delectus pariatur, iste laudantium saepe quidem cupiditate minima perspiciatis veniam! Minus nulla optio quos nisi hic, fugiat ipsum nam, asperiores enim eligendi cupiditate beatae corporis accusantium magnam?</p>
             <p>Assumenda optio, perspiciatis facere voluptates sed quidem temporibus necessitatibus, ullam non asperiores minus amet, reprehenderit ipsum et error ex eligendi enim? Eius eligendi dicta quisquam, ex quasi assumenda illo fugiat?</p>
@@ -71,7 +71,15 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnPath" : "../../"
+				"cdnPath" : "../../",
+				"exitScript": true,
+                "displayModal": true,
+				"targetBlank": true,
+                "exitURL": "http://www.google.ca",
+                "exitMsg": "This is a custom message. You are about to leave a secure site, do you wish to continue?",
+                "cancelMsg": "Nope",
+                "yesMsg": "Sure",
+                "exitDomains": "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
 			}));
 		</script>
 	</body>
