--- a/_src/html/gcweb-fr.html
+++ b/_src/html/gcweb-fr.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-fr.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Content page - Canada.ca</title>
+		<title>SGDC compile node  - page français</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
-		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
+		<meta name="description" content="La Boîte à outils de l'expérience Web (BOEW) comprend différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, utilisables et interopérables.">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script src="../../soyutils.js"></script>
@@ -38,7 +38,7 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">SGDC compile node  - page français</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi eos nostrum a, dicta veniam voluptatum mollitia similique alias quos itaque enim error magni atque dignissimos, nobis reprehenderit expedita ex temporibus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, <a href="http://csszengarden.com/219/">http://csszengarden.com/219/</a> adipisicing elit. Nisi eos nostrum a, dicta veniam voluptatum mollitia similique alias quos itaque enim error magni atque dignissimos, nobis reprehenderit expedita ex temporibus.</p>
             <p>Debitis quasi inventore asperiores assumenda modi dicta vel explicabo! Repellat eos inventore eius dolores sapiente quisquam odit corporis harum exercitationem similique quaerat nobis voluptas optio, esse aut voluptatum quidem iure.</p>
             <p>Ullam ad a delectus pariatur, iste laudantium saepe quidem cupiditate minima perspiciatis veniam! Minus nulla optio quos nisi hic, fugiat ipsum nam, asperiores enim eligendi cupiditate beatae corporis accusantium magnam?</p>
             <p>Assumenda optio, perspiciatis facere voluptates sed quidem temporibus necessitatibus, ullam non asperiores minus amet, reprehenderit ipsum et error ex eligendi enim? Eius eligendi dicta quisquam, ex quasi assumenda illo fugiat?</p>
@@ -71,7 +71,15 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnPath" : "../../"
+				"cdnPath" : "../../",
+				"exitScript": true,
+                "displayModal": true,
+				"targetBlank": true,
+                "exitURL": "http://www.google.ca",
+                "exitMsg": "Ceci est un message personnalisé. Vous êtes sur le point de quitter un site sécurisé, souhaitez-vous continuer?",
+                "cancelMsg": "Nope",
+                "yesMsg": "Sure",
+                "exitDomains": "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
 			}));
 		</script>
 	</body>
