--- a/_src/html/exit-en.html
+++ b/_src/html/exit-en.html
@@ -10,8 +10,10 @@
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
-		<script src="../../soyutils.js"></script>
-		<script src="../../gcintranet-en.js"></script>
+	    <script src="../../soyutils.js"></script>
+		<script src="../../gcweb-en.js"></script>
+		<!--<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/soyutils.js"></script>-->
+		<!-- <script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-en.js"></script> -->
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
@@ -32,19 +34,20 @@
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
-				"lngLinks": [{"lang": "fr",	"href": "gcintranet-fr.html", "text": "Français"}],
+				"lngLinks": [{"lang": "fr",	"href": "exit-fr.html", "text": "Français"}],
 				"cdnPath" : "../../"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-            <h1 property="name" id="wb-cont">CDTS node compile</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, <a href="http://csszengarden.com/219/">http://csszengarden.com/219/</a> adipisicing elit. Nisi eos nostrum a, dicta veniam voluptatum mollitia similique alias quos itaque enim error magni atque dignissimos, nobis reprehenderit expedita ex temporibus.</p>
-            <p>Debitis quasi inventore asperiores assumenda modi dicta vel explicabo! Repellat eos inventore eius dolores sapiente quisquam odit corporis harum exercitationem similique quaerat nobis voluptas optio, esse aut voluptatum quidem iure.</p>
-            <p>Ullam ad a delectus pariatur, iste laudantium saepe quidem cupiditate minima perspiciatis veniam! Minus nulla optio quos nisi hic, fugiat ipsum nam, asperiores enim eligendi cupiditate beatae corporis accusantium magnam?</p>
-            <p>Assumenda optio, perspiciatis facere voluptates sed quidem temporibus necessitatibus, ullam non asperiores minus amet, reprehenderit ipsum et error ex eligendi enim? Eius eligendi dicta quisquam, ex quasi assumenda illo fugiat?</p>
-            <p>Consectetur temporibus nesciunt est dicta perferendis molestiae magnam voluptatum maxime quisquam officia dolorem unde, at, assumenda obcaecati, alias aperiam. Blanditiis tempore eaque quas. Nulla dolor explicabo distinctio maiores vitae hic.</p>
-            <p>Quisquam, esse. Deserunt ab quibusdam exercitationem eveniet ducimus id, earum amet minima cum unde numquam, asperiores explicabo quisquam corrupti, dolores sed odit ipsum culpa quasi. Saepe ratione natus provident vitae.</p>
-
+			<h1 property="name" id="wb-cont">CDTS node compile GCWeb sample</h1>
+            <div data-ajax-replace="../../ajax/samples/description-en.html">Description of page</div>
+            <p>The link <a href="http://csszengarden.com/219/">http://csszengarden.com/219/</a> 
+                will display a warning because his hostname (csszengarden.com) is different from yours.
+                You'll be redirect to the <code>exiturl-en.html</code> page because the <code>exitURL</code> parameter contains the value <code>exiturl-en.html</code>.</p>
+            <p>The link <a href="./breadcrumbs-en.html">./breadcrumbs-en.html </a> 
+                won't display a warning because it has the same hostname as yours.</p>
+            <p>The link <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG">https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG</a> 
+                won't display a warning because his hostname (developer.mozilla.org) is in the exception list <code>exitDomains</code>.</p>
 			<div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
 				<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/preFooter-en.html -->
@@ -53,7 +56,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2019-07-31"
+					"dateModified": "2020-02-13"
 				});
 			</script>
 		</main>
@@ -70,9 +73,9 @@
 		</script>
 		<!-- Write closure template -->
 		<script>
-			document.write(wet.builder.refFooter({
-				"cdnPath" : "../../",
-				"exitScript": true,
+            document.write(wet.builder.refFooter({
+			    "cdnPath": "../../",
+                "exitScript": true,
                 "displayModal": true,
 				"targetBlank": true,
                 "exitURL": "http://www.google.ca",
@@ -80,7 +83,7 @@
                 "cancelMsg": "Nope",
                 "yesMsg": "Sure",
                 "exitDomains": "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
-			}));
-		</script>
+            }));
+        </script>
 	</body>
 </html>
