--- a/_src/html/exit-fr.html
+++ b/_src/html/exit-fr.html
@@ -4,14 +4,14 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-fr.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>SGDC compile node  - page français</title>
+		<title>Content page - Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l'expérience Web (BOEW) comprend différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, utilisables et interopérables.">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script src="../../soyutils.js"></script>
-		<script src="../../gcintranet-fr.js"></script>
+		<script src="../../gcweb-fr.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
@@ -32,19 +32,21 @@
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
-				"lngLinks": [{"lang": "en",	"href": "gcintranet-en.html", "text": "English"}],
+				"lngLinks": [{"lang": "en",	"href": "exit-fr.html", "text": "English"}],
 				"cdnPath" : "../../"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">SGDC compile node  - page français</h1>
-            <p>Lorem ipsum dolor sit amet <a href="http://csszengarden.com/219/">http://csszengarden.com/219/</a> consectetur, adipisicing elit. Nisi eos nostrum a, dicta veniam voluptatum mollitia similique alias quos itaque enim error magni atque dignissimos, nobis reprehenderit expedita ex temporibus.</p>
-            <p>Debitis quasi inventore asperiores assumenda modi dicta vel explicabo! Repellat eos inventore eius dolores sapiente quisquam odit corporis harum exercitationem similique quaerat nobis voluptas optio, esse aut voluptatum quidem iure.</p>
-            <p>Ullam ad a delectus pariatur, iste laudantium saepe quidem cupiditate minima perspiciatis veniam! Minus nulla optio quos nisi hic, fugiat ipsum nam, asperiores enim eligendi cupiditate beatae corporis accusantium magnam?</p>
-            <p>Assumenda optio, perspiciatis facere voluptates sed quidem temporibus necessitatibus, ullam non asperiores minus amet, reprehenderit ipsum et error ex eligendi enim? Eius eligendi dicta quisquam, ex quasi assumenda illo fugiat?</p>
-            <p>Consectetur temporibus nesciunt est dicta perferendis molestiae magnam voluptatum maxime quisquam officia dolorem unde, at, assumenda obcaecati, alias aperiam. Blanditiis tempore eaque quas. Nulla dolor explicabo distinctio maiores vitae hic.</p>
-            <p>Quisquam, esse. Deserunt ab quibusdam exercitationem eveniet ducimus id, earum amet minima cum unde numquam, asperiores explicabo quisquam corrupti, dolores sed odit ipsum culpa quasi. Saepe ratione natus provident vitae.</p>
-
+             <div data-ajax-replace="../../ajax/samples/description-en.html">Description of page</div>
+            <p>The link <a href="http://csszengarden.com/219/">http://csszengarden.com/219/</a> 
+                will display a warning because his hostname (csszengarden.com) is different from yours.
+                You'll be redirect to the <code>exiturl-en.html</code> page because the <code>exitURL</code> parameter contains the value <code>exiturl-en.html</code>.</p>
+            <p>The link <a href="./breadcrumbs-en.html">./breadcrumbs-en.html </a> 
+                won't display a warning because it has the same hostname as yours.</p>
+            <p>The link <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG">https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG</a> 
+                won't display a warning because his hostname (developer.mozilla.org) is in the exception list <code>exitDomains</code>.</p>
+		
 			<div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
 				<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/preFooter-fr.html -->
@@ -71,16 +73,22 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnPath" : "../../",
-				 "exitScript": true,
+				"cdnPath" : "../../"
+			}));
+		</script>
+		<!-- Write closure template -->
+		<script>
+            document.write(wet.builder.refFooter({
+                "exitScript": true,
                 "displayModal": true,
 				"targetBlank": true,
+				"cdnPath": "../../",
                 "exitURL": "http://www.google.ca",
                 "exitMsg": "Ceci est un message personnalisé. Vous êtes sur le point de quitter un site sécurisé, souhaitez-vous continuer?",
                 "cancelMsg": "Nope",
                 "yesMsg": "Sure",
                 "exitDomains": "developer.mozilla.org, www.esdc.gc.ca, www.jobbank.gc.ca"
-			}));
-		</script>
+            }));
+        </script>
 	</body>
 </html>
