Removed references to other themes (#8)

--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -11,7 +11,7 @@
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script src="./soyutils.js"></script>
-		<script src="./gcweb-en.js"></script>
+		<script src="./gcwebopc-en.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
@@ -41,15 +41,11 @@
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">CDTS node compile</h1>
 			<ul>
-				<li><a href="./cdts/html/gcweb-en.html">GCWeb English sample page</a></li>
-				<li><a href="./cdts/html/gcweb-fr.html">GCWeb French sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-en.html">GCWebOPC English sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC French sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-app-en.html">GCWebOPC Application English sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-app-fr.html">GCWebOPC Application French sample page</a></li>
 				<li><a href="./cdts/html/gcwebopc-splashpage.html">GCWebOPC splash page</a></li>
-				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet English sample page</a></li>
-				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet French sample page</a></li>
 			</ul>
 
 			<div id="def-preFooter">
