--- a/_src/html/index-fr.html
+++ b/_src/html/index-fr.html
@@ -11,7 +11,7 @@
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<script src="./soyutils.js"></script>
-		<script src="./gcweb-fr.js"></script>
+		<script src="./gcwebopc-fr.js"></script>
 		<noscript>
 			<!-- Write closure fall-back static file -->
 			<!-- /ROOT/app/cls/WET/gcweb/v4_0_32/cdts/static/refTop.html -->
@@ -41,15 +41,11 @@
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
             <h1 property="name" id="wb-cont">SGDC compile node</h1>
 			<ul>
-				<li><a href="./cdts/html/gcweb-en.html">GCWeb page d'exemple en anglais</a></li>
-				<li><a href="./cdts/html/gcweb-fr.html">GCWeb page d'exemple en français</a></li>
 				<li><a href="./cdts/html/gcwebopc-en.html">GCWebOPC page d'exemple en anglais</a></li>
 				<li><a href="./cdts/html/gcwebopc-fr.html">GCWebOPC page d'exemple en français</a></li>
 				<li><a href="./cdts/html/gcwebopc-app-en.html">GCWebOPC application page d'exemple en anglais</a></li>
 				<li><a href="./cdts/html/gcwebopc-app-fr.html">GCWebOPC application page d'exemple en français</a></li>
 				<li><a href="./cdts/html/gcwebopc-splashpage.html">GCWebOPC splash page d'exemple</a></li>
-				<li><a href="./cdts/html/gcintranet-en.html">GCIntranet page d'exemple en anglais</a></li>
-				<li><a href="./cdts/html/gcintranet-fr.html">GCIntranet page d'exemple en français</a></li>
 			</ul>
 
 			<div id="def-preFooter">
