--- a/etc/designs/canada/cdts/gcweb/release/cdts/ajax/securesamples.html
+++ b/etc/designs/canada/cdts/gcweb/release/cdts/ajax/securesamples.html
@@ -92,6 +92,13 @@
 						<td>NO</td>
 						<td>YES</td>
 					</tr>
+					<tr>
+						<td><a href="./apptop_adobe-analytics-en.shtml">Scenario : Add adobe analytics</a></td>
+						<td>Standard</td>
+						<td>NO</td>
+						<td>NO</td>
+						<td>YES</td>
+					</tr>
 				</tbody>
 			</table>
 			
