--- a/etc/designs/canada/cdts/gcweb/release/cdts/static/footer-en.html
+++ b/etc/designs/canada/cdts/gcweb/release/cdts/static/footer-en.html
@@ -23,7 +23,7 @@
 							<ul>
 								<li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
 								<li><a href="https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
-								<li><a href="https://www1.canada.ca/en/newsite.html">About Canada.ca</a></li>
+								<li><a href="https://www.canada.ca/en/newsite.html">About Canada.ca</a></li>
 								<li><a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
 								<li><a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li>
 							</ul>
