--- a/etc/designs/canada/cdts/gcweb/release/cdts/static/footer-fr.html
+++ b/etc/designs/canada/cdts/gcweb/release/cdts/static/footer-fr.html
@@ -23,7 +23,7 @@
 							<ul>
 								<li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
 								<li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
-								<li><a href="https://www1.canada.ca/fr/nouveausite.html">À propos de Canada.ca</a></li>
+								<li><a href="https://www.canada.ca/fr/nouveausite.html">À propos de Canada.ca</a></li>
 								<li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
 								<li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
 							</ul>
