Update apptop_adobe-analytics-fr.shtml and others

--- a/etc/designs/canada/cdts/gcintranet/release/cdts/ajax/securesamples.html
+++ b/etc/designs/canada/cdts/gcintranet/release/cdts/ajax/securesamples.html
@@ -16,77 +16,84 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop-en.shtml">Scenario : Default page</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop-en.shtml">Scenario : Default page</a></td>
 						<td>Standard</td>
 						<td>NO</td>
 						<td>NO</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop_all-en.shtml">Scenario : All settings</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_all-en.shtml">Scenario : All settings</a></td>
 						<td>Standard</td>
 						<td>YES</td>
 						<td>Custom</td>
 						<td>YES</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop_settings-en.shtml">Scenario : Settings</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_settings-en.shtml">Scenario : Settings</a></td>
 						<td>Standard</td>
 						<td>NO</td>
 						<td>NO</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop_signin-en.shtml">Scenario : Sign in</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_signin-en.shtml">Scenario : Sign in</a></td>
 						<td>Standard</td>
 						<td>NO</td>
 						<td>NO</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop_signout-en.shtml">Scenario : Sign out</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_signout-en.shtml">Scenario : Sign out</a></td>
 						<td>Standard</td>
 						<td>NO</td>
 						<td>NO</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop_search-en.shtml">Scenario : Search</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_search-en.shtml">Scenario : Search</a></td>
 						<td>Standard</td>
 						<td>YES</td>
 						<td>NO</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop_custommenu-en.shtml">Scenario : Custom menu</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_custommenu-en.shtml">Scenario : Custom menu</a></td>
 						<td>Standard</td>
 						<td>NO</td>
 						<td>Custom</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/apptop_breadcrumbs-en.shtml">Scenario : Breadcrumbs</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_breadcrumbs-en.shtml">Scenario : Breadcrumbs</a></td>
 						<td>Standard</td>
 						<td>NO</td>
 						<td>NO</td>
 						<td>YES</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/appfooter_footersections-en.shtml">Scenario : Custom footer</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/appfooter_footersections-en.shtml">Scenario : Custom footer</a></td>
 						<td>Custom</td>
 						<td>NO</td>
 						<td>NO</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/appfooter_transactional-en.shtml">Scenario : Transactional footer</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/appfooter_transactional-en.shtml">Scenario : Transactional footer</a></td>
 						<td>Transactional (custom links)</td>
 						<td>NO</td>
 						<td>NO</td>
 						<td>NO</td>
 					</tr>
 					<tr>
-						<td><a href="../../../../gcweb/v4_0_32/cdts/appTop/refFooter_exitscript-en.shtml">Scenario : Leaving a secure site</a></td>
+						<td><a href="../../../../gcweb/release/cdts/appTop/refFooter_exitscript-en.shtml">Scenario : Leaving a secure site</a></td>
+						<td>Standard</td>
+						<td>NO</td>
+						<td>NO</td>
+						<td>YES</td>
+					</tr>
+					<tr>
+						<td><a href="../../../../gcweb/release/cdts/appTop/apptop_adobe-analytics-en.shtml">Scenario : Add adobe analytics</a></td>
 						<td>Standard</td>
 						<td>NO</td>
 						<td>NO</td>
@@ -198,6 +205,13 @@
 						<td>NO</td>
 						<td>NO</td>
 						<td>YES</td>
-				</tr>
+					</tr>
+					<tr>
+						<td><a href="./apptop_adobe-analytics-en.shtml">Scenario : Add adobe analytics</a></td>
+						<td>Standard</td>
+						<td>NO</td>
+						<td>NO</td>
+						<td>YES</td>
+					</tr>
 				</tbody>
 			</table>
