--- a/etc/designs/canada/cdts/gcweb/release/cdts/static/top-en.html
+++ b/etc/designs/canada/cdts/gcweb/release/cdts/static/top-en.html
@@ -64,7 +64,7 @@
 				<div class="container">
 					<div class="row">
 						<ol class="breadcrumb">
-							<li><a href="https://www.canada.ca/en.html">Home</a></li>
+							<li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
 						</ol>
 					</div>
 				</div>
