--- a/etc/designs/canada/cdts/gcweb/release/cdts/static/secMenuTop-fr.html
+++ b/etc/designs/canada/cdts/gcweb/release/cdts/static/secMenuTop-fr.html
@@ -67,7 +67,7 @@
 				<div class="container">
 					<div class="row">
 						<ol class="breadcrumb">
-							<li><a href="https://www.canada.ca/fr.html">Accueil</a></li>
+							<li><a href="https://www.canada.ca/fr.html">Canada.ca</a></li>
 						</ol>
 					</div>
 				</div>
