Add doctype and lang -

--- a/etc/designs/canada/cdts/gcweb/release/cdts/ajax/securesamples-fr.html
+++ b/etc/designs/canada/cdts/gcweb/release/cdts/ajax/securesamples-fr.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="fr">
+			
 			<h1 property="name" id="wb-cont">Gabarits pour les applications GCWeb et GCIntranet</h1>
 				
 			<p>Toutes les variables et options de configuration seront disponibles sur GCPedia ou dans le document de mise en oeuvre.</p>
@@ -222,3 +225,4 @@
 					</tr>
 				</tbody>
 			</table>
+</html>
