--- a/etc/designs/canada/cdts/gcweb/release/cdts/ajax/securesamples.html
+++ b/etc/designs/canada/cdts/gcweb/release/cdts/ajax/securesamples.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+			
 			<h1 property="name" id="wb-cont">Application templates for GCWeb and GCIntranet</h1>
 				
 			<p>All variables and configuration options will be available on GCPedia or the implementation guide.</p>
@@ -222,3 +225,4 @@
 					</tr>
 				</tbody>
 			</table>
+</html>
