--- a/public/gcintranet/ajax/sitemenu-eng.html
+++ b/public/gcintranet/ajax/sitemenu-eng.html
@@ -7,7 +7,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <div class="pnl-strt container nvbar">
 	<h2 class="wb-inv">Topics menu</h2>
-	<div class="row"> 
+	<div class="row">
 		<!-- MAKE SURE ANY UPDATES TO THE TOP LEVEL OF THIS MENU ARE REFLECTED IN THE FILES sitemenunavbar-lang.asp -->
 		<ul class="list-inline menu" role="menubar">
 			<li><a href="#mnuNews" class="item">News</a>
@@ -62,10 +62,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			</li>
 			<li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">GCTools</a>
 				<ul class="sm list-unstyled" id="mnuTools" role="menu">
-					<li><a href="https://gcconnex.gc.ca"> <span class="bold-gc">GC</span>connex</span></a></li>
-					<li><a href="http://www.gcpedia.gc.ca/wiki/?setlang=en"> <span class="bold-gc">GC</span>pedia</span></a></li>
-					<li><a href="http://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002"> <span class="bold-gc">GC</span>directory</span></a></li>
-					<li><a href="https://gccollab.ca/splash/"> <span class="bold-gc">GC</span>collab</span></a></li>
+					<li><a href="https://gcconnex.gc.ca"><span class="bold-gc">GC</span>connex</a></li>
+					<li><a href="http://www.gcpedia.gc.ca/wiki/?setlang=en"><span class="bold-gc">GC</span>pedia</a></li>
+					<li><a href="http://gcdirectory-gcannuaire.gc.ca/en/GCD/?pgid=002"><span class="bold-gc">GC</span>directory</a></li>
+					<li><a href="https://gccollab.ca/splash/"><span class="bold-gc">GC</span>collab</a></li>
 				</ul>
 			</li>
 		</ul>
