--- a/public/gcintranet/ajax/sitemenu-fra.html
+++ b/public/gcintranet/ajax/sitemenu-fra.html
@@ -7,7 +7,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <div class="pnl-strt container nvbar">
 	<h2 class="wb-inv">Menu des sujets</h2>
-	<div class="row"> 
+	<div class="row">
 		<!-- MAKE SURE ANY UPDATES TO THE TOP LEVEL OF THIS MENU ARE REFLECTED IN THE FILES sitemenunavbar-lang.asp -->
 		<ul class="list-inline menu" role="menubar">
 			<li><a href="#mnuNouvelles" class="item">Nouvelles</a>
@@ -60,16 +60,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 					<li class="slflnk"><a href="https://intranet.canada.ca/wg-tg/index-fra.asp">Services et outils – Autre</a></li>
 				</ul>
 			</li>
-			
+
 			<li class="hidden-md hidden-lg"><a href="#mnuTools" class="item">OutilsGC</a>
 				<ul class="sm list-unstyled" id="mnuTools" role="menu">
-					<li><a href="https://gcconnex.gc.ca"> <span class="bold-gc">GC</span>connex</span></a></li>
-					<li><a href="http://www.gcpedia.gc.ca/wiki/?setlang=fr"> <span class="bold-gc">GC</span>pédia</span></a></li>
-					<li><a href="http://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002"> <span class="bold-gc">GC</span>annuaire</span></a></li>
-					<li><a href="https://gccollab.ca/splash/"> <span class="bold-gc">GC</span>collab</span></a></li>
+					<li><a href="https://gcconnex.gc.ca"><span class="bold-gc">GC</span>connex</a></li>
+					<li><a href="http://www.gcpedia.gc.ca/wiki/?setlang=fr"><span class="bold-gc">GC</span>pédia</a></li>
+					<li><a href="http://gcannuaire-gcdirectory.gc.ca/fr/GCA/?pgid=002"><span class="bold-gc">GC</span>annuaire</a></li>
+					<li><a href="https://gccollab.ca/splash/"><span class="bold-gc">GC</span>collab</a></li>
 				</ul>
 			</li>
-			
+
 		</ul>
 	</div>
 </div>
