fix: Un-opened P tag

--- a/public/gcweb/samples/breadcrumbs-en.html
+++ b/public/gcweb/samples/breadcrumbs-en.html
@@ -57,8 +57,8 @@
                 <li><code class="wb-prettify">"href"</code>: the url of the link. If left empty, the item will be displayed in text and not as a hyperlink.</li>
                 <li><code class="wb-prettify">"title"</code>: the text of the link that is displayed</li>
                 <li><code class="wb-prettify">"acronym"</code>: if your title has an acronym, you can use this property to provide the full text of the title.  It will be displayed when the user hovers over the link.</li>
-            </ul>            
-			<b>Note:</b> CDTS inserts a link to the home page of the Canada.ca website</p>
+            </ul>
+			<p><b>Note:</b> CDTS inserts a link to the home page of the Canada.ca website</p>
             <pre>
 defTop.outerHTML = wet.builder.top({
 ...
