--- a/public/gcweb/samples/breadcrumbs-fr.html
+++ b/public/gcweb/samples/breadcrumbs-fr.html
@@ -57,8 +57,8 @@
                 <li><code class="wb-prettify">href</code>: l'url du lien. S'il est laissé vide, l'élément sera affiché sous forme de texte et non sous forme de lien hypertexte.</li>
                 <li><code class="wb-prettify">title</code>: le texte du lien qui s'affiche</li>
                 <li><code class="wb-prettify">acronym</code>: si votre titre a un acronyme, vous pouvez utiliser cette propriété pour fournir le texte intégral du titre. Il sera affiché lorsque l'utilisateur survolera le lien.</li>
-            </ul>            
-			<b>Noter:</b> SGDC insère un lien vers la page d'accueil du site Web Canada.ca</p>
+            </ul>
+			<p><b>Noter:</b> SGDC insère un lien vers la page d'accueil du site Web Canada.ca</p>
             <pre>
 defTop.outerHTML = wet.builder.top({
 ...
