--- a/public/gcintranet/samples/custom-search-en.html
+++ b/public/gcintranet/samples/custom-search-en.html
@@ -55,7 +55,7 @@
 					"text": "Français"
 				}],
                 "customSearch": [{
-                    "action" : "https://www.canada.ca/en/sr.html", 
+                    "action" : "https://www.canada.ca/en/sr/srb.html", 
                     "placeholder" : "Canada.ca",
                     "id" : "wb-srch-q",
                     "name" : "q",
@@ -86,7 +86,7 @@
 defTop.outerHTML = wet.builder.appTop({
 ...
     "customSearch": [{
-        "action" : "https://www.canada.ca/en/sr.html", 
+        "action" : "https://www.canada.ca/en/sr/srb.html", 
         "placeholder" : "Canada.ca",
         "id" : "wb-srch-q",
         "name" : "q",
