--- a/public/gcweb/samples/custom-search-fr.html
+++ b/public/gcweb/samples/custom-search-fr.html
@@ -57,7 +57,7 @@
 					"text": "English"
 				}],
                 "customSearch": [{
-                    "action" : "https://www.canada.ca/en/sr.html", 
+                    "action" : "https://www.canada.ca/en/sr/srb.html", 
                     "placeholder" : "Canada.ca",
                     "id" : "wb-srch-q",
                     "name" : "q",
@@ -88,7 +88,7 @@
 defTop.outerHTML = wet.builder.appTop({
 ...
     "customSearch": [{
-        "action" : "https://www.canada.ca/en/sr.html", 
+        "action" : "https://www.canada.ca/en/sr/srb.html", 
         "placeholder" : "Canada.ca",
         "id" : "wb-srch-q",
         "name" : "q",
