reverting server sample files

--- a/public/gcweb/samples/server.html
+++ b/public/gcweb/samples/server.html
@@ -73,6 +73,12 @@
                                 <form action="https://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" name="cse-search-box" role="search" class="form-inline">
                                     <div class="form-group">
                                         <label for="wb-srch-q-en" class="wb-inv">Search website</label>
+                                        <input name="cdn" value="canada" type="hidden">
+                                        <input name="st" value="s" type="hidden">
+                                        <input name="num" value="10" type="hidden">
+                                        <input name="langs" value="eng" type="hidden">
+                                        <input name="st1rt" value="0" type="hidden">
+                                        <input name="s5bm3ts21rch" value="x" type="hidden">
                                         <input name="_charset_" value="UTF-8" type="hidden">
                                         <input id="wb-srch-q-en" list="wb-srch-q-ac-en" class="wb-srch-q form-control" name="q" value="" size="27" maxlength="150" placeholder="Search Canada.ca" type="search">
                                         <datalist id="wb-srch-q-ac-en"> 
@@ -105,6 +111,12 @@
                                 <form action="https://recherche-search.gc.ca/rGs/s_r?#wb-land" method="get" name="cse-search-box" role="search" class="form-inline">
                                     <div class="form-group">
                                         <label for="wb-srch-q-fr" class="wb-inv">Recherchez le site Web</label>
+                                        <input name="cdn" value="canada" type="hidden">
+                                        <input name="st" value="s" type="hidden">
+                                        <input name="num" value="10" type="hidden">
+                                        <input name="langs" value="eng" type="hidden">
+                                        <input name="st1rt" value="0" type="hidden">
+                                        <input name="s5bm3ts21rch" value="x" type="hidden">
                                         <input name="_charset_" value="UTF-8" type="hidden">
                                         <input id="wb-srch-q-fr" list="wb-srch-q-ac-fr" class="wb-srch-q form-control" name="q" value="" size="27" maxlength="150" placeholder="Rechercher dans Canada.ca" type="search">
                                         <datalist id="wb-srch-q-ac-fr"> 
