reverting server sample files

--- a/public/gcintranet/samples/server.html
+++ b/public/gcintranet/samples/server.html
@@ -112,7 +112,7 @@
                                         <input name="cdn" value="canada" type="hidden">
                                         <input name="st" value="s" type="hidden">
                                         <input name="num" value="10" type="hidden">
-                                        <input name="langs" value="eng" type="hidden">
+                                        <input name="langs" value="fra" type="hidden">
                                         <input name="st1rt" value="0" type="hidden">
                                         <input name="s5bm3ts21rch" value="x" type="hidden">
                                         <input name="_charset_" value="UTF-8" type="hidden">
