--- a/public/gcweb/samples/home-en.html
+++ b/public/gcweb/samples/home-en.html
@@ -203,7 +203,7 @@ defTop.outerHTML = wet.builder.top({
     <div class="col-sm-6">
     <a class="figcaption" href="#">
     <figure class="well well-sm brdr-rds-0">
-    <img class="img-responsive full-width" src="https://wet-boew.github.io/themes-dist/GCWeb/img/520x200.png" alt="">
+    <img class="img-responsive full-width" src="../../wet-boew/img/520x200.png" alt="">
     <figcaption class="h5">[Feature hyperlink text]</figcaption>
     <p>Brief description of the feature being promoted.</p>
     </figure>
@@ -212,7 +212,7 @@ defTop.outerHTML = wet.builder.top({
     <div class="col-sm-6">
     <a class="figcaption" href="#">
     <figure class="well well-sm brdr-rds-0">
-    <img class="img-responsive full-width" src="https://wet-boew.github.io/themes-dist/GCWeb/img/520x200.png" alt="">
+    <img class="img-responsive full-width" src="../../wet-boew/img/520x200.png" alt="">
     <figcaption class="h5">[Feature hyperlink text]</figcaption>
     <p>Brief description of the feature being promoted.</p>
     </figure>
