--- a/public/global/esdcmenu1-eng.html
+++ b/public/global/esdcmenu1-eng.html
@@ -24,9 +24,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li><a href="https://esdc.prv/en/department/champions/index.shtml">Champions</a></li>
           <li><a href="https://esdc.prv/en/department/esdccc/index.shtml">ESDC Charitable Campaign</a></li>
           <li><a href="https://esdc.prv/en/department/service-strategy/index.shtml">Our Service Transformation</a></li>
-          <!--<li><a href="https://edsc.prv/en/department/pses/2017/index.shtml">2017 Public Service Employee Annual Survey</a></li>
+          <!--<li><a href="https://iservice.prv/eng/hr/hr_planning/pses.shtml">2017 Public Service Employee Annual Survey</a></li>
           <li><a href="https://www.tbs-sct.gc.ca/pses-saff/2017-2/results-resultats/bq-pq/02/index-fra.aspx">2017 Public Service Employee Survey</a></li>-->
-          <li><a href="https://esdc.prv/en/department/pses/index.shtml">Public Service Employee Survey</a></li>
+          <li><a href="https://iservice.prv/eng/hr/hr_planning/pses.shtml">Public Service Employee Survey</a></li>
           <li class="slflnk"><a href="https://esdc.prv/en/department/index.shtml">Our Department - More</a></li>
         </ul>
       </li>
@@ -43,7 +43,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li><a href="https://esdc.prv/en/iitb/index.shtml">Innovation, Information and Technology</a></li>
                 <li><a href="https://esdc.prv/en/iaermb/index.shtml">Internal Audit and Enterprise Risk Management</a></li>
                 <li><a href="https://esdc.prv/en/lb/index.shtml">Learning</a></li>
-                <li><a href="https://esdc.prv/en/lsb/index.shtml">Legal Services</a></li>
+                <li><a href="https://esdc.prv/en/lsu/index.shtml">Legal Services</a></li>
                 <li><a href="https://esdc.prv/en/pasrb/index.shtml">Public Affairs and Stakeholder Relations</a></li>
                 <li><a href="https://esdc.prv/en/seb/index.shtml">Skills and Employment</a></li>
                 <li><a href="https://esdc.prv/en/sspb/index.shtml">Strategic and Service Policy Branch</a></li>
