--- a/public/global/esdcmenu1-fra.html
+++ b/public/global/esdcmenu1-fra.html
@@ -16,9 +16,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <li><a href="https://edsc.prv/fr/ministere/champions/index.shtml">Champions</a></li>
           <li><a href="https://edsc.prv/fr/ministere/ccedsc/index.shtml">Campagne de charitÃ© EDSC</a></li>
           <li><a href="https://esdc.prv/fr/ministere/service-strategique/index.shtml">Notre transformation de service</a></li>
-          <!--<li><a href="https://edsc.prv/fr/ministere/saff/2017/index.shtml">Sondage annuel auprÃ¨s des employÃ©s fÃ©dÃ©raux de 2017</a></li>
+          <!--<li><a href="https://iservice.prv/fra/rh/planification_rh/saff.shtml">Sondage annuel auprÃ¨s des employÃ©s fÃ©dÃ©raux de 2017</a></li>
           <li><a href="https://www.tbs-sct.gc.ca/pses-saff/2017-2/results-resultats/bq-pq/02/index-fra.aspx">Sondage auprÃ¨s des fonctionnaires fÃ©dÃ©raux de 2017</a></li>-->
-            <li><a href="https://edsc.prv/fr/ministere/saff/index.shtml">Sondage auprÃ¨s des fonctionnaires fÃ©dÃ©raux</a></li>
+            <li><a href="https://iservice.prv/fra/rh/planification_rh/saff.shtml">Sondage auprÃ¨s des fonctionnaires fÃ©dÃ©raux</a></li>
           <li class="slflnk"><a href="https://edsc.prv/fr/ministere/index.shtml">Notre ministÃ¨re - Autre</a></li>
         </ul>
       </li>
@@ -39,7 +39,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li><a href="https://esdc.prv/fr/dgsm/connexions/secmin/index.shtml">SecrÃ©tariat ministÃ©riel</a></li>
                 <li><a href="https://esdc.prv/fr/dgsrh/index.shtml">Services de ressources humaines</a></li>
                
-                <li><a href="https://edsc.prv/fr/dgsj/index.shtml">Services juridiques</a></li>
+                <li><a href="https://edsc.prv/fr/usj/index.shtml">Services juridiques</a></li>
               </ul>
             </details>
           </li>
