Updating link that is breaking pipeline

--- a/public/gcintranet/ajax/sitemenu-eng.html
+++ b/public/gcintranet/ajax/sitemenu-eng.html
@@ -36,7 +36,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				<ul class="sm list-unstyled" id="mnuCareer" role="menu">
 					<li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-eng.asp">Find a job</a></li>
 					<li><a href="https://www.csps-efpc.gc.ca/pso-eng.aspx">Public service orientation</a></li>
-					<li><a href="https://idp.csps-efpc.gc.ca/idp/login-en.jsp">GCcampus</a></li>
+					<li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/en">GCcampus</a></li>
 					<li><a href="https://www.csps-efpc.gc.ca/events/index-eng.aspx">Learning events</a></li>
 					<li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-eng.asp">Second language training and evaluation</a></li>
 					<li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-eng.asp">Communities</a></li>
