--- a/public/gcintranet/ajax/sitemenu-fra.html
+++ b/public/gcintranet/ajax/sitemenu-fra.html
@@ -36,7 +36,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				<ul class="sm list-unstyled" id="mnuCarriere" role="menu">
 					<li><a href="https://intranet.canada.ca/cdl-dca/fj-te/index-fra.asp">Trouver un emploi</a></li>
 					<li><a href="https://www.csps-efpc.gc.ca/pso-fra.aspx">Orientation à la fonction publique</a></li>
-					<li><a href="https://idp.csps-efpc.gc.ca/idp/Authn/UserPassword">GCcampus</a></li>
+					<li><a href="https://learn-apprendre.csps-efpc.gc.ca/application/fr">GCcampus</a></li>
 					<li><a href="https://www.csps-efpc.gc.ca/events/index-fra.aspx">Événements d&#8217;apprentissage</a></li>
 					<li><a href="https://intranet.canada.ca/cdl-dca/slte-fels/index-fra.asp">Formation et évaluation de langue seconde</a></li>
 					<li><a href="https://intranet.canada.ca/cdl-dca/psc-cfp/index-fra.asp">Collectivités</a></li>
